--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
+	<dependency>
+	    <groupId>com.github.javaparser</groupId>
+	    <artifactId>javaparser-core</artifactId>
+	    <version>3.18.0</version>
+	</dependency>
   </dependencies>
 
   <build>
