--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mvel/mvel2 -->
 		<dependency>
-		    <groupId>org.mvel</groupId>
-		    <artifactId>mvel2</artifactId>
-		    <version>2.4.12.Final</version>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.4.12.Final</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
 		<dependency>
@@ -68,6 +68,11 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>openxml4j</artifactId>
 			<version>1.0-beta</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.3</version>
 		</dependency>
 	</dependencies>
 
